--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   skip: True  # [win or osx]
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -22,6 +22,9 @@ requirements:
     - {{ cdt('libuuid-devel') }}
     - make
     - cmake
+    - autoconf
+    - automake
+    - libtool
   host:
     - libnl
     - rdma-core
